Now run smoothly

--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -482,8 +482,8 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[0.0626, 0.0926, 0.0945, 0.1446, 0.0566, 0.0765, 0.0667, 0.1824, 0.2237]],\n",
-       "        grad_fn=<ExpBackward>), tensor([[-0.0137]], grad_fn=<TanhBackward>))"
+       "(tensor([[0.2273, 0.0886, 0.1292, 0.0920, 0.1357, 0.0536, 0.1395, 0.0780, 0.0560]],\n",
+       "        grad_fn=<ExpBackward>), tensor([[-0.3707]], grad_fn=<TanhBackward>))"
       ]
      },
      "execution_count": 11,
@@ -829,7 +829,7 @@
     "        del dataset\n",
     "        # save (s,p,v) datasets for neural net training\n",
     "        if not os.path.isdir(\"./datasets/iter_%d/\" % iteration):\n",
-    "            os.mkdir()\n",
+    "            os.mkdir(\"./datasets/iter_%d/\" % iteration)\n",
     "        save_as_pickle(\"iter_%d/\" % iteration + \"dataset_cpu%i_%i_%s\" % (cpu,idxx, datetime.datetime.today().strftime(\"%Y-%m-%d\")),dataset_p)"
    ]
   },
@@ -1169,35 +1169,12 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[I 200411 13:41:39 <ipython-input-18-8fbaffc5cd76>:9] Preparing model for MCTS...\n",
-      "[I 200411 13:41:39 <ipython-input-18-8fbaffc5cd76>:17] Loaded ./model_data/tictactoe_iter1.pth.tar model.\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './datasets/iter_1/dataset_cpu0_0_2020-04-11'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-128cd1590712>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteration\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtotal_iterations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0mrun_MCTS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m     \u001b[0mtrain_connectnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miteration\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_optim_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-18-8fbaffc5cd76>\u001b[0m in \u001b[0;36mrun_MCTS\u001b[0;34m(args, start_idx, iteration)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0mMCTS_self_play\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_games_per_MCTS_process\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miteration\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Finished MCTS!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-17-b02ebc1b8653>\u001b[0m in \u001b[0;36mMCTS_self_play\u001b[0;34m(connectnet, num_games, start_idx, cpu, args, iteration)\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0;32mdel\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;31m# save (s,p,v) datasets for neural net training\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0msave_as_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"iter_%d/\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0miteration\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"dataset_cpu%i_%i_%s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcpu\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0midxx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%Y-%m-%d\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdataset_p\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-16-3f4cfacb6a18>\u001b[0m in \u001b[0;36msave_as_pickle\u001b[0;34m(filename, data)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcomplete_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./datasets/\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomplete_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomplete_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomplete_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './datasets/iter_1/dataset_cpu0_0_2020-04-11'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch.optim as optim\n",
     "\n",
-    "args = {\"iteration\":1,\n",
+    "args = {\"iteration\":5,\n",
     "       \"total_iterations\":5,\n",
     "       \"MCTS_num_processes\":5,\n",
     "       \"num_games_per_MCTS_process\":5,\n",
@@ -1237,25 +1214,186 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Jouer contre l'ia"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ast \n",
+    "\n",
+    "def play_game(net):\n",
+    "    # Asks human what he/she wanna play as\n",
+    "    white = None;\n",
+    "    black = None\n",
+    "    while (True):\n",
+    "        play_as = input(\"What do you wanna play as? (\\\"O\\\"/\\\"X\\\")? Note: \\\"O\\\" starts first, \\\"X\\\" starts second\\n\")\n",
+    "        if play_as == \"O\":\n",
+    "            black = net;\n",
+    "            break\n",
+    "        elif play_as == \"X\":\n",
+    "            white = net;\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"I didn't get that.\")\n",
+    "    current_board = Morpion_board()\n",
+    "    checkmate = False\n",
+    "    dataset = []\n",
+    "    value = 0;\n",
+    "    t = 0.1;\n",
+    "    moves_count = 0\n",
+    "    while checkmate == False and current_board.actions() != []:\n",
+    "        if moves_count <= 5:\n",
+    "            t = 1\n",
+    "        else:\n",
+    "            t = 0.1\n",
+    "        moves_count += 1\n",
+    "        dataset.append(copy.deepcopy(encode_board(current_board)))\n",
+    "        print(current_board.board);\n",
+    "        print(\" \")\n",
+    "        if current_board.player == 0:\n",
+    "            if white != None:\n",
+    "                print(\"AI is thinking........\")\n",
+    "                root = UCT_search(current_board, 777, white, t)\n",
+    "                policy = get_policy(root, t)\n",
+    "                current_board = do_decode_n_move_pieces(current_board, \\\n",
+    "                                                        int(np.random.choice(np.array(range(9)), \\\n",
+    "                                                                             p=policy)))\n",
+    "            else:\n",
+    "                while (True):\n",
+    "                    row, col = ast.literal_eval(\n",
+    "                        input(\"Which tuple do you wanna drop your piece? (Enter row, column as [(1,3),(1,3)])\\n\"))\n",
+    "                    current_board.draw_sign([int(row) - 1, int(col) - 1])\n",
+    "                    break\n",
+    "        elif current_board.player == 1:\n",
+    "            if black != None:\n",
+    "                print(\"AI is thinking.............\")\n",
+    "                root = UCT_search(current_board, 333, black, t)\n",
+    "                policy = get_policy(root, t)\n",
+    "                current_board = do_decode_n_move_pieces(current_board, \\\n",
+    "                                                        int(np.random.choice(np.array(range(9)), \\\n",
+    "                                                                             p=policy)))\n",
+    "            else:\n",
+    "                while (True):\n",
+    "                    row, col = ast.literal_eval(\n",
+    "                        input(\"Which tuple do you wanna drop your piece? (Enter row, column as [(1,3),(1,3)])\\n\"))\n",
+    "                    current_board.draw_sign([int(row) - 1, int(col) - 1])\n",
+    "                    break\n",
+    "        # decode move and move piece(s)\n",
+    "        if current_board.check_winner() == True:  # someone wins\n",
+    "            if current_board.player == 0:  # black wins\n",
+    "                value = -1\n",
+    "            elif current_board.player == 1:  # white wins\n",
+    "                value = 1\n",
+    "            checkmate = True\n",
+    "    dataset.append(encode_board(current_board))\n",
+    "    print(current_board.board);\n",
+    "    print(\" \")\n",
+    "    if value == 1:\n",
+    "        if play_as == \"O\":\n",
+    "            dataset.append(f\"AI as black wins\");\n",
+    "            print(\"YOU LOSE!!!!!!!\")\n",
+    "        else:\n",
+    "            dataset.append(f\"Human as black wins\");\n",
+    "            print(\"YOU WIN!!!!!!!\")\n",
+    "        return \"black\", dataset\n",
+    "    elif value == -1:\n",
+    "        if play_as == \"O\":\n",
+    "            dataset.append(f\"Human as white wins\");\n",
+    "            print(\"YOU WIN!!!!!!!!!!!\")\n",
+    "        else:\n",
+    "            dataset.append(f\"AI as white wins\");\n",
+    "            print(\"YOU LOSE!!!!!!!\")\n",
+    "        return \"white\", dataset\n",
+    "    else:\n",
+    "        dataset.append(\"Nobody wins\");\n",
+    "        print(\"DRAW!!!!!\")\n",
+    "        return None, dataset"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What do you wanna play as? (\"O\"/\"X\")? Note: \"O\" starts first, \"X\" starts second\n",
+      "X\n",
+      "[[' ' ' ' ' ']\n",
+      " [' ' ' ' ' ']\n",
+      " [' ' ' ' ' ']]\n",
+      " \n",
+      "Which tuple do you wanna drop your piece? (Enter row, column as [(1,3),(1,3)])\n",
+      "1,1\n",
+      "[['X' ' ' ' ']\n",
+      " [' ' ' ' ' ']\n",
+      " [' ' ' ' ' ']]\n",
+      " \n",
+      "AI is thinking........\n",
+      "[['X' ' ' ' ']\n",
+      " [' ' ' ' ' ']\n",
+      " ['O' ' ' ' ']]\n",
+      " \n",
+      "Which tuple do you wanna drop your piece? (Enter row, column as [(1,3),(1,3)])\n",
+      "3,3\n",
+      "[['X' ' ' ' ']\n",
+      " [' ' ' ' ' ']\n",
+      " ['O' ' ' 'X']]\n",
+      " \n",
+      "AI is thinking........\n",
+      "[['X' ' ' ' ']\n",
+      " ['O' ' ' ' ']\n",
+      " ['O' ' ' 'X']]\n",
+      " \n",
+      "Which tuple do you wanna drop your piece? (Enter row, column as [(1,3),(1,3)])\n",
+      "2,2\n",
+      "[['X' ' ' ' ']\n",
+      " ['O' 'X' ' ']\n",
+      " ['O' ' ' 'X']]\n",
+      " \n",
+      "AI is thinking........\n",
+      "[['X' ' ' 'O']\n",
+      " ['O' 'X' ' ']\n",
+      " ['O' ' ' 'X']]\n",
+      " \n",
+      "YOU WIN!!!!!!!\n",
+      "Do you wanna play again? (Y/N)\n",
+      "N\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_net = \"tictactoe_iter5.pth.tar\"\n",
+    "best_net_filename = os.path.join(\"./model_data/\", \\\n",
+    "                                 best_net)\n",
+    "best_cnet = ConnectNet()\n",
+    "# cuda = torch.cuda.is_available()\n",
+    "# if cuda:\n",
+    "#     best_cnet.cuda()\n",
+    "best_cnet.eval()\n",
+    "checkpoint = torch.load(best_net_filename)\n",
+    "best_cnet.load_state_dict(checkpoint['state_dict'])\n",
+    "play_again = True\n",
+    "while (play_again == True):\n",
+    "    play_game(best_cnet)\n",
+    "    while (True):\n",
+    "        again = input(\"Do you wanna play again? (Y/N)\\n\")\n",
+    "        if again.lower() in [\"y\", \"n\"]:\n",
+    "            if again.lower() == \"n\":\n",
+    "                play_again = False;\n",
+    "                break\n",
+    "            else:\n",
+    "                break"
+   ]
   },
   {
    "cell_type": "code",
